--- a/templates/login/signup_step3.html.twig
+++ b/templates/login/signup_step3.html.twig
@@ -16,7 +16,7 @@
 			<div class="panel-heading"><h3>Benutzername und Passwort</h3></div>
 			<div class="panel-body">
 				<form class="form" role="form" method="post" action="/anmelden/{{ key }}">
-					
+					<input type="hidden" name="csrf_token" value="{{ csrf_token }}" />
 					Fast geschafft: Jetzt benötigen wir nur noch einen Benutzernamen und ein Passwort von Dir!
 					<hr />
 					<div class="form-group">
