--- a/templates/404.html.twig
+++ b/templates/404.html.twig
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html.twig" %}
+{% extends "_layouts/main.html.twig" %}
 
 {% block content %}
 	<div class="content-section-b">
