--- a/templates/_layouts/main.html.twig
+++ b/templates/_layouts/main.html.twig
@@ -44,8 +44,9 @@
 	{% if flash.warning %}<div class="container"><div class="alert alert-warning fade">{{ flash.warning }}</div></div>{% endif %}
 	{% if flash.info %}<div class="container"><div class="alert alert-info fade">{{ flash.info }}</div></div>{% endif %}
 
-	{% block content %}
-	{% endblock %}
+	<div class="content">
+{% block content %}{% endblock %}
+	</div>
 
     <!-- Footer -->
     <footer>
