--- a/templates/homepage/impressum.html.twig
+++ b/templates/homepage/impressum.html.twig
@@ -6,12 +6,12 @@
 <div id="container-impressum">
 	<div class="container">
 		<ol class="breadcrumb">
-			<li><a href="/">Startseite</a></li>
-			<li class="active">Impressum/Disclaimer</li>
+			<li><a href="/">{% trans "Startseite" %}</a></li>
+			<li class="active">{% trans "Impressum/Disclaimer" %}</li>
 		</ol>
 		<div class="panel panel-info">
 			<div class="panel-heading">
-				<h3>Impressum/Disclaimer</h3>
+				<h3>{% trans "Impressum/Disclaimer" %}</h3>
 			</div>
 			<div class="panel-body">
 				<!-- TODO -->
