--- a/templates/_partials/menu.html.twig
+++ b/templates/_partials/menu.html.twig
@@ -2,22 +2,23 @@
 	<div class="container-fluid">
 		<div class="navbar-header">
 			<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navi">
-				<span class="sr-only">Navigation auf/zuklappen</span>
+				<span class="sr-only">{% trans "Navigation auf/zuklappen" %}</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="/">Home</a>
+			{# TODO: Add project name #}
+			<a class="navbar-brand" href="/">{% trans "Home" %}</a>
 		</div>
 		<div class="collapse navbar-collapse" id="navi">
 			<ul class="nav navbar-nav navbar-left">
-				<li class="active"><a href="/">Home</a></li>
+				<li class="active"><a href="/">{% trans "Home" %}</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">				
 				{% if session.isLoggedin %}
-					<li><a href="/logout">Logout</a></li>
+					<li><a href="/logout">{% trans "Logout" %}</a></li>
 				{% else %}
-					<li><a href="/login">Login</a></li>
+					<li><a href="/login">{% trans "Login" %}</a></li>
 				{% endif %}
 			</ul>
 		</div>
